tests/baselines/reference/parserExportAssignment1.errors.txt
==== tests/cases/compiler/parserExportAssignment1.ts (1 errors) ====
    export = foo
    ~~~~~~~~~~~~
!!! parserExportAssignment1.ts(1,1): error TS2095: Cannot find name 'foo'.